--- a/projet_voiture/build.gradle
+++ b/projet_voiture/build.gradle
@@ -16,6 +16,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-admin:7.1.0'
+	implementation 'commons-io:commons-io:2.15.1'
 	compileOnly 'org.projectlombok:lombok:1.18.20'
 	annotationProcessor 'org.projectlombok:lombok:1.18.20'
    	implementation 'org.postgresql:postgresql:42.2.18'
